--- a/src/Admin/CSS/AdminPanel.css
+++ b/src/Admin/CSS/AdminPanel.css
@@ -1,4 +1,7 @@
 .admin-panel {
+  margin-top: 60px;
+  margin-bottom: 20px;
+  margin-right: 20px;
   padding-top: 20px;
   padding-left: 270px;
   /* padding: 20px; */
@@ -39,7 +42,8 @@
   padding: 15px;
   background-color: #f9f9f9;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  text-align: left;
+  z-index: 10px;
 }
 
 .adminCardImage {
@@ -64,9 +68,9 @@
   margin: 5px 0;
 }
 
-.card button {
+.edit-button,
+.delete-button {
   margin: 5px 5px 0 0;
-  padding: 5px 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -75,6 +79,7 @@
 .edit-button {
   background-color: #ffc107;
   color: #fff;
+  padding: 5px 20px;
 }
 
 .edit-button:hover {
@@ -84,6 +89,7 @@
 .delete-button {
   background-color: #dc3545;
   color: #fff;
+  padding: 5px 15px;
 }
 
 .delete-button:hover {
@@ -133,9 +139,9 @@
   padding: 5px;
 }
 
-.submit-button {
+.update-button,
+.add-button {
   padding: 10px;
-  background-color: #28a745;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -143,7 +149,19 @@
   cursor: pointer;
 }
 
-.submit-button:hover {
+.update-button{
+  background-color: #ffc107;
+}
+
+.update-button:hover {
+  background-color: #e0a800;
+}
+
+.add-button {
+  background-color: #28a745;
+}
+
+.add-button:hover {
   background-color: #218838;
 }
 
@@ -199,4 +217,50 @@
   display: flex;
   justify-content: space-between; /* Distribute buttons to opposite sides */
   align-items: center; /* Align buttons vertically */
+}
+
+.add-product-button {
+  position: fixed; /* Makes the button fixed on the viewport */
+  bottom: 20px; /* Distance from the bottom of the page */
+  right: 20px; /* Distance from the right side of the page */
+  background-color: #0957e8; /* Blue background */
+  color: white; /* White text */
+  border: none; /* No border */
+  padding: 15px 20px; /* Padding for a nice size */
+  font-size: 18px; /* Font size for visibility */
+  cursor: pointer; /* Pointer cursor on hover */
+  border-radius: 50%; /* Circular button */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+}
+
+.add-product-button:hover {
+  background-color: #0741ac; /* Darker Blue on hover */
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background-image: "../../../public/assets/photos/form-bg.jpeg";
+  padding: 20px;
+  border-radius: 8px;
+  width: 80%;
+  max-width: 500px;
+}
+
+.edit-delete-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
